#调整界面去掉顶部标题

--- a/apps/download.html
+++ b/apps/download.html
@@ -1,13 +1,14 @@
 <link rel="stylesheet" type="text/css" href="../static/download/style.css">
-<div style="overflow-y:hidden">
-<div class="name-title">
-  <span></span> | 游戏下载
-</div>
+<div style="overflow-x:hidden;overflow-y:auto;display:block;hight:100%;">
 <div class="row">
   <div class="col-xs-12">
-    <div class="margin-t-4 search-input">
-      <input class="form-control pull-left search_name" type="text" style="margin-left:20px;margin-top: -2px;margin-right: 10px;" />
+    <div class="search-input" style="margin-top:12px;">
+      <div class="col-xs-9">
+      <input class="form-control pull-left search_name" type="text" style="margin-top: -2px;" />
+      </div>
+      <div class="col-xs-3">
       <a href="javascript:void(0)" class="btn btn-success btn-sm pull-left search_btn">查询游戏</a>
+      </div>
     </div>
   </div>
 </div>
@@ -25,7 +26,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="top_games center-block" style="margin-top:20px;">
+    <div class="top_games center-block" style="margin-top:12px;">
       <table class="table">
         <caption class="opacity(50%)">本网吧游戏排行前十:</caption>
         <thead>
