--- a/apps/index.html
+++ b/apps/index.html
@@ -9,27 +9,27 @@
   <div class="select-area">
     <div class="select-item">
       <a href="javascript:void(0);" class="attendance_btn">
-        <img src="../static/images/u2648.png" />
+        <svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_attendance_svg"></use></svg>
         <p>上座情况</p>
       </a>
     </div>
     <div class="select-item left-b">
       <div class="message_count clue"></div>
       <a href="javascript:void(0);" class="message_btn">
-        <img src="../static/images/u2660.png" />
+        <svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_message_svg"></use></svg>
         <p>玩家留言</p>
       </a>
     </div>
     <div class="select-item">
       <a href="javascript:void(0);" class="download_btn">
-        <img src="../static/images/u2668.png" />
+        <svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_download_svg"></use></svg>
         <p>游戏下载</p>
       </a>
     </div>
     <div class="select-item left-b">
       <div class="notice_count clue"></div>
       <a href="javascript:void(0);" class="notice_btn">
-        <img src="../static/images/u2670.png" />
+        <svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_notice_svg"></use></svg>
         <p>重要通知</p>
       </a>
     </div>
