--- a/apps/notice.html
+++ b/apps/notice.html
@@ -1,9 +1,6 @@
-<div class="name-title">
-  <span></span> | 通知中心
+<div class="notice_content">
 </div>
-<div class="margin-t-3 notice_content">
-</div>
-<div class="margin-t-3 notice_detail" style="diplay:none;">
+<div class="notice_detail" style="diplay:none;">
 </div>
 <script type="text/javascript">
 $(document).ready(function() {
