--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
   <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
   <meta name="description" content="">
   <meta name="author" content="xsriy">
-  <title>方格子</title>
+  <title>方格子●网吧管理平台</title>
   <!-- JQuery core CSS and JS -->
   <script src="sea-modules/jquery/jquery-3.1.1.js"></script>
   <!-- Bootstrap core CSS and JS -->
@@ -43,7 +43,7 @@
         </div>
         <div class="checkbox">
           <label class="pull-left">
-            <input type="checkbox" class="checkbox style-0" id="rmbUser" name="saveCookie">
+            <input type="checkbox" class="checkbox style-0" id="rmbUser" name="saveCookie" checked>
             <span><strong style="font-family: '微软雅黑';">记住账号</strong></span>
           </label>
           <label class="pull-right">
@@ -51,7 +51,7 @@
             <span><strong style="font-family: '微软雅黑';">记住密码</strong></span>
           </label>
         </div>
-        <a class="btn btn-block subimt_btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</a>
+        <button class="btn btn-block subimt_btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
         <div class="login_msg text-center center-block"></div>
       </form>
     </div>
