--- a/apps/message.html
+++ b/apps/message.html
@@ -1,216 +1,13 @@
 <link rel="stylesheet" href="../static/css/weui.min.css" />
-<style type="text/css">
-.content-bottom span a {
-	color: #4E90FF;
-}
+<link rel="stylesheet" type="text/css" href="../static/message/style.css">
 
-.reply_content {
-	margin-bottom: 54px;
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	background: rgba(17, 17, 17, 0.90);
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	padding: 5px;
-	display: none;
-}
-
-.reply_msg {
-	margin-left: 10px;
-	width: 80%;
-	opacity: 0.95;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow
-		ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out
-		.15s;
-	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-pre {
-	margin: 0;
-	font-family: inherit;
-	font-size: inherit;
-	white-space: pre-wrap;
-	word-break: normal;
-}
-
-.flex {
-	background: #fff;
-	border: none;
-	border-radius: 4px;
-	max-height: 112px;
-	min-height: 46px;
-	padding-left: 10px;
-	padding-right: 10px;
-	overflow-y: auto;
-	overflow-x: hidden;
-	outline: none;
-	font-size: 16px;
-	line-height: 22px;
-}
-
-.reply_msg_btn button {
-	margin-right: 10px;
-}
-
-.reply_title {
-	margin-left: 10px;
-	margin-bottom: 3px;
-	background: rgba(17, 17, 17, 0);
-	margin-right: 10px;
-	font-size: 18px;
-	color: #fff;
-	width: 80%;
-	padding: 0px;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow
-		ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out
-		.15s;
-	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-.reply_commit_btn {
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	margin-bottom: 63px;
-	margin-right: 10px;
-}
-
-.reply_cancel_btn {
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	margin-bottom: 102px;
-	margin-right: 10px;
-}
-
-.msg_setting {
-	background-color: deepskyblue;
-	position: fixed;
-	right: 0;
-	margin: 10px 100px;
-}
-
-.tools_div {
-	transition: transform 0.5s;
-    transform: translate(159px,0px);
-	position: fixed;
-	right: 0;
-	top: 0;
-}
-
-.weui-cells {
-	opacity: 0.9;
-	margin-top: 3px;
-	background-color: #1d242a;
-	line-height: 16px;
-	font-size: 16px;
-	color: #fff;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius:5px;
-}
-
-.weui-cell {
-	padding: 0px 5px;
-}
-
-.weui-cell_switch {
-	padding-top: 0px;
-	padding-bottom: 0px;
-}
-
-.weui-switch-cp {
-	padding-top: 7px;
-}
-
-.weui-cell__bd {
-	margin-right: 7px;
-}
-
-/*右箭头*/
-.right {
-	margin-top: -2px;
-	margin-left: 3px;
-	width: 36px;
-	height: 36px;
-	position: absolute;
-	left: 0;
-}
-
-.right-arrow1, .right-arrow2 {
-	width: 0;
-	height: 0;
-	display: block;
-	position: absolute;
-	left: 0;
-	border-top: 10px transparent dashed;
-	border-right: 10px transparent dashed;
-	border-bottom: 10px transparent dashed;
-	border-left: 10px white solid;
-	overflow: hidden;
-}
-
-.right-arrow1 {
-	left: 1px; /*重要*/
-	border-left: 10px #fff solid;
-}
-
-.right-arrow2 {
-	border-left: 10px white solid;
-}
-
-/*左箭头*/
-.left {
-	margin-top: -2px;
-	margin-left: -8px;
-	width: 36px;
-	height: 36px;
-	position: absolute;
-	left: 0;
-}
-
-.left-arrow1, .left-arrow2 {
-	width: 0;
-	height: 0;
-	display: block;
-	position: absolute;
-	left: 0;
-	border-top: 10px transparent dashed;
-	border-left: 10px transparent dashed;
-	border-bottom: 10px transparent dashed;
-	border-right: 10px white solid;
-	overflow: hidden;
-}
-
-.left-arrow1 {
-	border-right: 10px #fff solid;
-}
-
-.left-arrow2 {
-	left: 1px; /*重要*/
-	border-right: 10px white solid;
-}
-
-.btn.disabled, .btn[disabled], fieldset[disabled] .btn {
-	opacity: initial;
-}
-
-</style>
 <div class="msg_setting img-circle">
 	<div class="tools_div">
 		<div class="weui-cells weui-cells_form">
 			<div class="weui-cell weui-cell_switch">
 				<div class="weui-cell__bd">
 					<div class="arrow-left arrow-box" >
-	        			<a class="left_btn" href="#">
+	        			<a class="left_btn" href="javascript:void(0);">
 	        			<b class="left">
 	        				<i class="left-arrow1"></i>
 	        				<i class="left-arrow2"></i>
@@ -218,7 +15,7 @@ pre {
 	        			</a>
     				</div>
 					<div class="arrow-right arrow-box" style="display:none;">
-						<a class="right_btn" href="#">
+						<a class="right_btn" href="javascript:void(0);">
 						<b class="right">
 							<i class="right-arrow1"></i> 
 							<i class="right-arrow2"></i>
@@ -238,7 +35,7 @@ pre {
 	</div>
 </div>
 <div class="msg_content"></div>
-
+<input type="hidden" name="pageNo" class="page_no" value="1" /> 
 <div class="reply_content">
 	<div class="reply_title">
 		回复：<span class="reply_number_msg"></span> 号机玩家 <span class="msgid_msg"
@@ -253,8 +50,7 @@ pre {
 		<button type="button" class="btn btn-success reply_commit_btn">回复</button>
 	</div>
 </div>
-
-<script src="../sea-modules/we-chat/zepto.min.js"></script>
+<input type="hidden" name="pageNo" id="pageNo" value="1" />
 <script type="text/javascript">
 	$(document).ready(function() {
 		seajs.use('../static/message/src/main');
