--- a/apps/index.html
+++ b/apps/index.html
@@ -9,28 +9,36 @@
   <div class="select-area">
     <div class="select-item">
       <a href="javascript:void(0);" class="attendance_btn">
-        <svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_attendance_svg"></use></svg>
-        <p>上座情况</p>
+      	<div>
+        	<svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_attendance_svg"></use></svg>
+        	<p>上座情况</p>
+        </div>
       </a>
     </div>
     <div class="select-item left-b">
       <div class="message_count clue"></div>
       <a href="javascript:void(0);" class="message_btn">
-        <svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_message_svg"></use></svg>
-        <p>玩家留言</p>
+      	<div>
+        	<svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_message_svg"></use></svg>
+        	<p>玩家留言</p>
+        </div>
       </a>
     </div>
     <div class="select-item">
       <a href="javascript:void(0);" class="download_btn">
-        <svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_download_svg"></use></svg>
-        <p>游戏下载</p>
+      	<div>
+        	<svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_download_svg"></use></svg>
+        	<p>游戏下载</p>
+        </div>
       </a>
     </div>
     <div class="select-item left-b">
       <div class="notice_count clue"></div>
       <a href="javascript:void(0);" class="notice_btn">
-        <svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_notice_svg"></use></svg>
-        <p>重要通知</p>
+      	<div>
+        	<svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_notice_svg"></use></svg>
+        	<p>重要通知</p>
+        </div>
       </a>
     </div>
     <div class="wangheng">上海网恒文化传播有限公司</div>
