--- a/apps/notice.html
+++ b/apps/notice.html
@@ -2,6 +2,7 @@
 </div>
 <div class="notice_detail" style="diplay:none;">
 </div>
+<input type="hidden" name="pageNo" class="page_no" value="1" />
 <script type="text/javascript">
 $(document).ready(function() {
   seajs.use('../static/notice/src/main');
