--- a/login.html
+++ b/login.html
@@ -2,13 +2,17 @@
 <html lang="zh-CN">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-  <meta name="description" content="">
-  <meta name="author" content="xsriy">
-  <title>方格子●网吧管理平台</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport"
+	content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
+<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="format-detection" content="telephone=no">
+<meta name="description" content="">
+<meta name="author" content="xsriy">
+<title>方格子·网吧管理平台</title>
   <!-- JQuery core CSS and JS -->
   <script src="sea-modules/jquery/jquery-3.1.1.js"></script>
   <!-- Bootstrap core CSS and JS -->
@@ -30,7 +34,7 @@
   <header></header>
   <section>
     <div class="container">
-      <div class="header">方格子●网吧管理平台</div>
+      <div class="header">方格子·网吧管理平台</div>
       <form class="form-signin" id="loginFrom">
         <!-- 方便展示，暂时使用get -->
         <div class="form-group has-feedback">
@@ -51,7 +55,9 @@
             <span><strong style="font-family: '微软雅黑';">记住密码</strong></span>
           </label>
         </div>
+        <div class="form-group">
         <button class="btn btn-block subimt_btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
+        </div>
         <div class="login_msg text-center center-block"></div>
       </form>
     </div>
