# 各页面结构调整，美化，将table表使用div来创建 # 添加动画效果 # 更换所有图标为 svg

--- a/apps/download.html
+++ b/apps/download.html
@@ -1,51 +1,35 @@
 <link rel="stylesheet" type="text/css" href="../static/download/style.css">
-<div style="overflow-x:hidden;overflow-y:auto;display:block;hight:100%;">
-<div class="row">
-  <div class="col-xs-12">
-    <div class="top_games center-block" style="margin-top:12px;">
-      <table class="table">
-        <caption class="opacity(50%)">本网吧游戏排行前十:</caption>
-        <thead>
-          <tr>
-            <th class="text-center">名次</th>
-            <th class="text-right">游戏</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr style="display:none;"></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <div class="search-input" style="margin-top:12px;">
-      <div class="col-xs-9">
-      <input class="form-control pull-left search_name" type="text" style="margin-top: -2px;" />
-      </div>
-      <div class="col-xs-3">
-      <a href="javascript:void(0)" class="btn btn-success btn-sm pull-left search_btn">查询游戏</a>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12 search_games_content">
-    <div class="search_games">
-      <input type="hidden" name="pageNo" class="page_no" value="1" /> 
-      <table class="table">
-        <caption>共找到<span>0</span>个游戏:</caption>
-        <tbody>
-          <tr style="display:none;"></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="search-input">
+				<div class="col-xs-9">
+					<input class="form-control pull-left search_name" placeholder="下载游戏到网吧服务器" type="text" style="margin-top: -1px;" />
+				</div>
+				<div class="col-xs-3">
+					<a href="javascript:void(0);" class="btn btn-success btn-sm pull-left search_btn">查询游戏</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<article class="search_games">
+				<section class="search_games_panel" style="display:block">
+				</section>
+			</article>
+			<input type="hidden" name="pageNo" class="page_no" value="1" />
+	  </div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="top_games center-block" style="margin-top:12px;">
+			</div>
+			<div class="top_detail_btn center-block"><<展开列表>></div>
+		</div>
+	</div>
+<script type="text/javascript" src="../sea-modules/dropload/dropload.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-  seajs.use('../static/download/src/main');
+	seajs.use('../static/download/src/main');
 })
 </script>
