--- a/apps/index.html
+++ b/apps/index.html
@@ -9,36 +9,36 @@
   <div class="select-area">
     <div class="select-item">
       <a href="javascript:void(0);" class="attendance_btn">
-      	<div>
+      	<i class="icon_lg">
         	<svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_attendance_svg"></use></svg>
         	<p>上座情况</p>
-        </div>
+        </i>
       </a>
     </div>
     <div class="select-item left-b">
       <div class="message_count clue"></div>
       <a href="javascript:void(0);" class="message_btn">
-      	<div>
+      	<i class="icon_lg">
         	<svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_message_svg"></use></svg>
         	<p>玩家留言</p>
-        </div>
+        </i>
       </a>
     </div>
     <div class="select-item">
       <a href="javascript:void(0);" class="download_btn">
-      	<div>
+      	<i class="icon_lg">
         	<svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_download_svg"></use></svg>
         	<p>游戏下载</p>
-        </div>
+        </i>
       </a>
     </div>
     <div class="select-item left-b">
       <div class="notice_count clue"></div>
       <a href="javascript:void(0);" class="notice_btn">
-      	<div>
+      	<i class="icon_lg">
         	<svg class="svg_icon" viewBox="0 0 1024 1024"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#_notice_svg"></use></svg>
         	<p>重要通知</p>
-        </div>
+        </i>
       </a>
     </div>
     <div class="wangheng">上海网恒文化传播有限公司</div>
