--- a/apps/attendance.html
+++ b/apps/attendance.html
@@ -1,36 +1,31 @@
-<link rel="stylesheet" type="text/css"
-	href="../static/attendance/style.css">
+<link rel="stylesheet" type="text/css" href="../static/attendance/style.css">
 <div style="padding-top:12px;">
-	<div class="top_div">
-		<p class="prompt">网吧上座情况：</p>
-		<p class="prompt">
-			机器总数：<span class="total_machine"></span>台
-		</p>
-		<p class="prompt">
-			当前在线：<span class="c-4 online_machine"></span>台
-		</p>
-		<p class="prompt">
-			今日最高上座率：<span class="c-4 top_online"></span>
-		</p>
-	</div>
-	<div class="top_div" style="margin-top:12px;">
-		<table class="table">
-			<caption>最近七天网吧上机情况：</caption>
-			<thead>
-				<tr>
-					<th class="text-left">日期</th>
-					<th class="text-center">上线机器</th>
-					<th class="text-right">开机率</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr style="display:none;"></tr>
-			</tbody>
-		</table>
-	</div>
+  <div class="barinfo_div center-block" style="margin-top:12px;">
+    <div class="row row_col">
+      <div class="col-xs-12 col-sm-12 col-md-12 text-center">网吧上座情况</div>
+    </div>
+    <div class="row row_col text-center">
+      <div class="col-xs-6 col-sm-6 col-md-6 text-right">机器总数：</div>
+      <div class="col-xs-6 col-sm-6 col-md-6">
+      	<span class="total_machine"></span>台
+      </div>
+    </div>
+    <div class="row row_col text-center">
+      <div class="col-xs-6 col-sm-6 col-md-6 text-right">当前在线：</div>
+      <div class="col-xs-6 col-sm-6 col-md-6 c-4">
+      	<span class="online_machine"></span>台
+      </div>
+    </div>
+    <div class="row row_col text-center">
+      <div class="col-xs-6 col-sm-6 col-md-6 text-right">今日最高上座率：</div>
+      <div class="col-xs-6 col-sm-6 col-md-6 c-4"><span class="c-4 top_online"></span></div>
+    </div>
+  </div>
+  <div class="recent_div center-block" style="margin-top:12px;">
+  </div>
 </div>
 <script type="text/javascript">
-	$(document).ready(function() {
-		seajs.use("../static/attendance/src/main")
-	})
+$(document).ready(function() {
+  seajs.use("../static/attendance/src/main")
+})
 </script>
