#游戏下载 滚动加载 fix bug

--- a/apps/attendance.html
+++ b/apps/attendance.html
@@ -2,7 +2,7 @@
 <div style="padding-top:12px;">
   <div class="barinfo_div center-block" style="margin-top:12px;">
     <div class="row row_col">
-      <div class="col-xs-12 col-sm-12 col-md-12 text-center">网吧上座情况</div>
+      <div class="col-xs-12 col-sm-12 col-md-12 text-center row_col_t">网吧上座情况</div>
     </div>
     <div class="row row_col text-center">
       <div class="col-xs-6 col-sm-6 col-md-6 text-right">机器总数：</div>
