--- a/apps/notice.html
+++ b/apps/notice.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 .icon_lg_text {
-		height: 16px;
+	height: 16px;
     width: 8rem;
     display: block;
     margin: 0 auto 3px;
@@ -23,9 +23,19 @@
     -moz-user-select: none;
     -ms-user-select: none;
 }
+.detail_panel {
+	margin: 0 auto;
+	margin-top: 12px;
+    width: 95%;
+    overflow-x: hidden;
+	overflow-y: visible;
+	display: none;
+	border-radius: 5px;
+}
 </style>
-
-<div class="notice_detail" sytle="display:none;">
+<div class="detail_panel">
+	<div class="notice_detail">
+	</div>
 </div>
 <article class="notice_content">
   <section class="notice_content_panel" style="display:block">
