#细节调整，去掉首页，上座界面调整

--- a/apps/attendance.html
+++ b/apps/attendance.html
@@ -2,23 +2,23 @@
 <div style="padding-top:12px;">
   <div class="barinfo_div center-block" style="margin-top:12px;">
     <div class="row row_col">
-      <div class="col-xs-12 col-sm-12 col-md-12 text-center row_col_t">网吧上座情况</div>
+      <div class="col-xs-12 col-sm-12 col-md-12 text-center row_col_t netbar_title"></div>
     </div>
-    <div class="row row_col text-center">
-      <div class="col-xs-6 col-sm-6 col-md-6 text-right">机器总数：</div>
-      <div class="col-xs-6 col-sm-6 col-md-6">
+    <div class="row row_col_no text-center">
+      <div class="col-xs-4 col-sm-4 col-md-4">机器总数：</div>
+      <div class="col-xs-8 col-sm-8 col-md-8 text-left">
       	<span class="total_machine"></span>台
       </div>
     </div>
-    <div class="row row_col text-center">
-      <div class="col-xs-6 col-sm-6 col-md-6 text-right">当前在线：</div>
-      <div class="col-xs-6 col-sm-6 col-md-6 c-4">
+    <div class="row row_col_no text-center">
+      <div class="col-xs-4 col-sm-4 col-md-4">当前在线：</div>
+      <div class="col-xs-8 col-sm-8 col-md-8 c-4 text-left">
       	<span class="online_machine"></span>台
       </div>
     </div>
-    <div class="row row_col text-center">
-      <div class="col-xs-6 col-sm-6 col-md-6 text-right">今日最高上座率：</div>
-      <div class="col-xs-6 col-sm-6 col-md-6 c-4"><span class="c-4 top_online"></span></div>
+    <div class="row row_col_no text-center">
+      <div class="col-xs-4 col-sm-4 col-md-4">到期时间：</div>
+      <div class="col-xs-8 col-sm-8 col-md-8 c-4 text-left"><span class="c-4 due_time"></span></div>
     </div>
   </div>
   <div class="recent_div center-block" style="margin-top:12px;">
