--- a/apps/download.html
+++ b/apps/download.html
@@ -3,7 +3,7 @@
 		<div class="col-xs-12">
 			<div class="search-input">
 				<div class="col-xs-9">
-					<input class="form-control pull-left search_name" placeholder="下载游戏到网吧服务器" type="text" style="margin-top: -1px;" />
+					<input class="form-control pull-left placeholder search_name" placeholder="下载游戏到网吧服务器" type="text" style="margin-top: -1px;" />
 				</div>
 				<div class="col-xs-3">
 					<a href="javascript:void(0);" class="btn btn-success btn-sm pull-left search_btn">查询游戏</a>
