#增加网址图标 #监听事件重复添加问题解决 #查看完通知回到顶部

--- a/login.html
+++ b/login.html
@@ -22,7 +22,10 @@
   <link href="sea-modules/bootstrap-validator/bootstrapValidator.css" rel="stylesheet" />
 
   <link rel="stylesheet" type="text/css" href="static/login/style.css">
-
+  <!-- #FAVICONS -->
+  <link href="static/images/favicon.ico" rel="bookmark" type="image/x-icon" />
+  <link href="static/images/favicon.ico" rel="icon" type="image/x-icon" />
+  <link href="static/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <script src="sea-modules/bootstrap-validator/bootstrapValidator.js"></script>
   <!-- jquery-cookie core JS -->
   <script src="sea-modules/jquery-cookie/jquery.cookie.js"></script>
