--- a/apps/attendance.html
+++ b/apps/attendance.html
@@ -1,31 +1,42 @@
-<link rel="stylesheet" type="text/css" href="../static/attendance/style.css">
+<link rel="stylesheet" type="text/css" href="../static/attendance/style.css" data-genuitec="wc1-0-0"
+      data-genuitec-lp-enabled="true" data-genuitec-file-id="wc1-0"
+      data-genuitec-path="/weChat/WebRoot/apps/attendance.html">
 <div style="padding-top:12px;">
-  <div class="barinfo_div center-block" style="margin-top:12px;">
-    <div class="row row_col">
-      <div class="col-xs-12 col-sm-12 col-md-12 text-center row_col_t netbar_title"></div>
+    <div class="barinfo_div center-block" style="margin-top:12px;" data-genuitec="wc1-0-2">
+        <div class="row row_col" data-genuitec="wc1-0-3">
+            <div class="col-xs-12 col-sm-12 col-md-12 text-left row_col_t netbar_title t_padding" data-genuitec="wc1-0-4"></div>
+        </div>
+        <div class="row row_col_no text-center" data-genuitec="wc1-0-5">
+            <div class="col-xs-12 col-sm-12 col-md-12 text-left t_padding" data-genuitec="wc1-0-6">机器总数:
+                <span class="total_machine" data-genuitec="wc1-0-8"></span>台
+            </div>
+        </div>
+        <div class="row row_col_no text-center" data-genuitec="wc1-0-9">
+            <div class="col-xs-12 col-sm-12 col-md-12 text-left t_padding" data-genuitec="wc1-0-10">当前在线:
+                <span class="c-4 online_machine" data-genuitec="wc1-0-12"></span>台
+            </div>
+        </div>
+        <div class="row row_col_no text-center" data-genuitec="wc1-0-13">
+            <div class="col-xs-12 col-sm-12 col-md-12 text-left t_padding" data-genuitec="wc1-0-14">到期时间:
+                <span class="c-4 due_time" data-genuitec="wc1-0-16"></span>
+            </div>
+        </div>
+        <div class="row row_col_no text-center" data-genuitec="wc1-0-13">
+            <div class="col-xs-12 col-sm-12 col-md-12 text-left t_padding" data-genuitec="wc1-0-14" style="width: 98%;">近期成绩:
+                <span class="attendance_ave" data-genuitec="wc1-0-16"></span>
+            </div>
+        </div>
+        <div class="row row_col_no text-center" data-genuitec="wc1-0-13">
+            <div class="col-xs-12 col-sm-12 col-md-12 text-left t_padding" data-genuitec="wc1-0-14" style="width: 98%;">综合实力:
+                <span class="attendance_top" data-genuitec="wc1-0-16"></span>
+            </div>
+        </div>
     </div>
-    <div class="row row_col_no text-center">
-      <div class="col-xs-4 col-sm-4 col-md-4">机器总数：</div>
-      <div class="col-xs-8 col-sm-8 col-md-8 text-left">
-      	<span class="total_machine"></span>台
-      </div>
+    <div class="recent_div center-block" style="margin-top:12px;" data-genuitec="wc1-0-17">
     </div>
-    <div class="row row_col_no text-center">
-      <div class="col-xs-4 col-sm-4 col-md-4">当前在线：</div>
-      <div class="col-xs-8 col-sm-8 col-md-8 c-4 text-left">
-      	<span class="online_machine"></span>台
-      </div>
-    </div>
-    <div class="row row_col_no text-center">
-      <div class="col-xs-4 col-sm-4 col-md-4">到期时间：</div>
-      <div class="col-xs-8 col-sm-8 col-md-8 c-4 text-left"><span class="c-4 due_time"></span></div>
-    </div>
-  </div>
-  <div class="recent_div center-block" style="margin-top:12px;">
-  </div>
 </div>
 <script type="text/javascript">
-$(document).ready(function() {
-  seajs.use("../static/attendance/src/main")
-})
+    $(document).ready(function () {
+        seajs.use("../static/attendance/src/main")
+    })
 </script>
