--- a/login.html
+++ b/login.html
@@ -2,73 +2,79 @@
 <html lang="zh-CN">
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport"
-	content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
-<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="format-detection" content="telephone=no">
-<meta name="description" content="">
-<meta name="author" content="xsriy">
-<title>方格子·网吧管理平台</title>
-  <!-- JQuery core CSS and JS -->
-  <script src="sea-modules/jquery/jquery-3.1.1.js"></script>
-  <!-- Bootstrap core CSS and JS -->
-  <link href="sea-modules/bootstrap/bootstrap.css" rel="stylesheet" />
-  <script src="sea-modules/bootstrap/bootstrap.js"></script>
-  <!-- bootstrapValidator core CSS and JS -->
-  <link href="sea-modules/bootstrap-validator/bootstrapValidator.css" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="description" content="">
+    <meta name="author" content="xsriy">
+    <title>方格子·网吧管理平台</title>
+    <!-- JQuery core CSS and JS -->
+    <script src="sea-modules/jquery/jquery-3.1.1.js"></script>
+    <!-- Bootstrap core CSS and JS -->
+    <link href="sea-modules/bootstrap/bootstrap.min.css" rel="stylesheet"/>
+    <script src="sea-modules/bootstrap/bootstrap.min.js"></script>
+    <!-- bootstrapValidator core CSS and JS -->
+    <link href="sea-modules/bootstrap-validator/bootstrapValidator.css" rel="stylesheet"/>
 
-  <link rel="stylesheet" type="text/css" href="static/login/style.css">
-  <!-- #FAVICONS -->
-  <link href="static/images/favicon.ico" rel="bookmark" type="image/x-icon" />
-  <link href="static/images/favicon.ico" rel="icon" type="image/x-icon" />
-  <link href="static/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-  <script src="sea-modules/bootstrap-validator/bootstrapValidator.js"></script>
-  <!-- jquery-cookie core JS -->
-  <script src="sea-modules/jquery-cookie/jquery.cookie.js"></script>
-  <!-- jquery-form core JS -->
-  <script src="sea-modules/jquery-form/jquery.form.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/login/style.css">
+    <!-- #FAVICONS -->
+    <link href="static/images/favicon.ico" rel="bookmark" type="image/x-icon"/>
+    <link href="static/images/favicon.ico" rel="icon" type="image/x-icon"/>
+    <link href="static/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+    <script>"undefined" == typeof CODE_LIVE && (!function (e) {
+        var t = {nonSecure: "55271", secure: "55272"}, c = {nonSecure: "http://", secure: "https://"},
+            r = {nonSecure: "127.0.0.1", secure: "gapdebug.local.genuitec.com"},
+            n = "https:" === window.location.protocol ? "secure" : "nonSecure";
+        script = e.createElement("script"), script.type = "text/javascript", script.async = !0, script.src = c[n] + r[n] + ":" + t[n] + "/codelive-assets/bundle.js", e.getElementsByTagName("head")[0].appendChild(script)
+    }(document), CODE_LIVE = !0);</script>
 </head>
 
-<body>
-  <header></header>
-  <section>
+<body data-genuitec-lp-enabled="false" data-genuitec-file-id="wc1-6" data-genuitec-path="/weChat/WebRoot/login.html">
+<header data-genuitec-lp-enabled="false" data-genuitec-file-id="wc1-6"
+        data-genuitec-path="/weChat/WebRoot/login.html"></header>
+<section>
     <div class="container">
-      <div class="header">方格子·网吧管理平台</div>
-      <form class="form-signin" id="loginFrom">
-        <!-- 方便展示，暂时使用get -->
-        <div class="form-group has-feedback">
-          <input type="text" id="inputUsername" name='username' class="form-control input-opacity" placeholder="网吧账号" required autofocus>
-          <span class="glyphicon glyphicon-user form-control-feedback icon" aria-hidden="true"></span>
-        </div>
-        <div class="form-group has-feedback">
-          <input type="password" id="inputPassword" name='password' class="form-control input-opacity" placeholder="密码" required>
-          <span class="glyphicon glyphicon-lock form-control-feedback icon" aria-hidden="true"></span>
-        </div>
-        <div class="checkbox">
-          <label class="pull-left">
-            <input type="checkbox" class="checkbox style-0" id="rmbUser" name="saveCookie" checked>
-            <span><strong style="font-family: '微软雅黑';">记住账号</strong></span>
-          </label>
-          <label class="pull-right">
-            <input type="checkbox" class="checkbox style-0" id="rmbPassWord" name="saveCookie">
-            <span><strong style="font-family: '微软雅黑';">记住密码</strong></span>
-          </label>
-        </div>
-        <div class="form-group">
-        <button class="btn btn-block subimt_btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
-        </div>
-        <div class="login_msg text-center center-block"></div>
-      </form>
+        <div class="header">方格子·网吧管理平台</div>
+        <form class="form-signin" id="loginFrom">
+            <!-- 方便展示，暂时使用get -->
+            <div class="form-group has-feedback">
+                <input type="text" id="inputUsername" name='username' class="form-control input-opacity"
+                       placeholder="网吧账号" required autofocus>
+                <span class="glyphicon glyphicon-user form-control-feedback icon" aria-hidden="true"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <input type="password" id="inputPassword" name='password' class="form-control input-opacity"
+                       placeholder="密码" required>
+                <span class="glyphicon glyphicon-lock form-control-feedback icon" aria-hidden="true"></span>
+            </div>
+            <div class="checkbox">
+                <label class="pull-left">
+                    <input type="checkbox" class="checkbox style-0" id="rmbUser" name="saveCookie" checked>
+                    <span><strong style="font-family: '微软雅黑';">记住账号</strong></span>
+                </label>
+                <label class="pull-right">
+                    <input type="checkbox" class="checkbox style-0" id="rmbPassWord" name="saveCookie">
+                    <span><strong style="font-family: '微软雅黑';">记住密码</strong></span>
+                </label>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-block subimt_btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
+            </div>
+            <div class="login_msg text-center center-block"></div>
+        </form>
     </div>
     <!-- /container -->
-  </section>
-  <footer>
+</section>
+<footer>
     <p>上海网恒文化传播有限公司</p>
-  </footer>
+</footer>
+<span style="display:none">
+  <script src="https://s95.cnzz.com/z_stat.php?id=1261669216&web_id=1261669216" language="JavaScript"></script>
+  </span>
 </body>
 <!-- JQuery core CSS and JS -->
 <script src="sea-modules/jquery/jquery-3.1.1.js"></script>
@@ -80,17 +86,18 @@
 <script src="sea-modules/jquery-cookie/jquery.cookie.js"></script>
 <!-- jquery-form core JS -->
 <script src="sea-modules/jquery-form/jquery.form.js"></script>
+
 <script type="text/javascript" src="sea-modules/seajs/sea.js"></script>
 
 <script type="text/javascript">
-$(document).ready(function() {
-  seajs.config({
-    base: "../sea-modules/",
-    alias: {}
-  });
-  // 加载入口模块
-  seajs.use("./static/login/src/main")
-});
+    $(document).ready(function () {
+        seajs.config({
+            base: "../sea-modules/",
+            alias: {}
+        });
+        // 加载入口模块
+        seajs.use("./static/login/src/main")
+    });
 </script>
 
 </html>
